--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "next",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "use-sound": "^4.0.1",
     "use-timer": "^2.0.1"
   },
   "devDependencies": {
