--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "use-timer": "^2.0.1"
   },
   "devDependencies": {
+    "@types/dom-screen-wake-lock": "^1.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
