--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "next",
+    "@material-ui/icons": "next",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "use-sound": "^4.0.1",
